[package]
name = "fsm"
version = "0.1.6"
authors = ["Tom Boddaert <fsm@tomboddaert.com>"]
edition = "2021"
description = "A simple crate for defining Finite State Machines"
readme = "README.md"
homepage = "https://github.com/tomboddaert/fsm/"
repository = "https://github.com/tomboddaert/fsm/"
license = "MIT OR Apache-2.0"
keywords = ["fsm", "finite-state-machine"]
categories = ["config"]

[lib]
name = "fsm"
path = "lib/lib.rs"
crate-type = ["lib"]

[features]
default = ["std"]
std = []
